[package]
name = "kilat_escrow"
version = "0.1.0"
edition = "2021"
authors = ["Bootcamp Dev <developer@kilatescrow.io>"]
description = "Secure milestone escrow contract for local SEA tech service providers"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = true
lto = true
panic = "abort"
codegen-units = 1